testsuite/tests/th/T7484.stderr

T7484.hs:7:2: error:
    Illegal variable name: ‘a ’
    When splicing a TH declaration: a  = 5
